NIV-409:Fixed filters dropdown box overlap

--- a/src/app/interactions/interactions-results/interactions-filters/interactions-filters.component.css
+++ b/src/app/interactions/interactions-results/interactions-filters/interactions-filters.component.css
@@ -37,3 +37,10 @@
   background: #0db9f0 !important;
   border-radius: 2px !important;
 }
+
+.sticky.is-anchored {
+  position: relative;
+  right: auto;
+  left: auto;
+  z-index: 5;
+}
